--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,12 +9,10 @@
 
 <% include ./partials/navbar.ejs %>
 
-<div class="container">
     <%- body -%>
-</div> <!-- /container -->
+ <!-- /container -->
 <% include ./partials/footer.ejs %>
-<script src="/public/js/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<% include ./partials/javascriptOnly.ejs%>
 
 </body>
 </html>
