--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,14 +10,14 @@
 
         <ul class="nav navbar-nav navbar-right">
             <% if (!user) {%>
-                <li><a class="dropdow-toggle" data-toggle="dropdown" href="#">Signup / Login</a>
+                <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Signup / Login</a>
                     <ul class="dropdown-menu">
                         <li><a href="/signup">Signup</a></li>
                         <li><a href="/login">Login</a></li>
                     </ul>
                 </li>
             <% } else { %>
-                <li><a class="dropdow-toggle" data-toggle="dropdown" href="#"><%= user.profile.name%></a>
+                <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= user.profile.name%></a>
                     <ul class="dropdown-menu">
                         <li><a href="/profile">Profile</a></li>
                         <li><a href="/logout">Logout</a></li>
