--- a/views/accounts/profile.ejs
+++ b/views/accounts/profile.ejs
@@ -1,1 +1,19 @@
 <% layout('layout') -%>
+
+<div class="container">
+    <div class="col-sm-6 col-md-4">
+        <img class="img-circle img-responsive img-center" src="<%=user.profile.picture%>" alt="">
+        <br />
+        <p>Name: <%=user.profile.name%></p>
+        <p>Email: <%=user.email%></p>
+
+        <% if (user.address === "" || typeof user.address === 'undefined') { %>
+           <p>Adress: <span style="color: #c0392b; font-weight: bold">You have no address</span></p>
+        <% } else { %>
+           <p>Adress: <%=user.address%></p>
+        <% } %>
+
+
+        <a href="/edit-profile" class="btn btn-primary btn-lg">Edit Profile</a>
+    </div>
+</div>
