--- a/views/partials/javascriptOnly.ejs
+++ b/views/partials/javascriptOnly.ejs
@@ -1,2 +1,3 @@
 <script src="/public/js/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="/public/js/custom.js"></script>
