--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,16 @@
             </button>
             <a class="navbar-brand" href="#">Project name</a>
         </div>
-
+        <div class="col-sm-3 col-md-3">
+            <form class="navbar-form" role="search" method="post" action="/search">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search" name="q">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
+        </div>
         <ul class="nav navbar-nav navbar-right">
 
             <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Category</a>
